@@ -1,3 +1,10 @@
+2014-06-04  Marek Polacek  <polacek@redhat.com>
+
+	PR c/30020
+	* c-common.c (check_case_bounds): Add location parameter.
+	Use it.
+	(c_add_case_label): Pass loc to check_case_bounds.
+
 2014-06-03  Marek Polacek  <polacek@redhat.com>
 
 	PR c/60439
